# mentic-svn

mentic/: .fileName.idx  .kind.idx  .name.idx  .prefix.idx  .scope.idx  Makefile.svn  aclocal.m4  configure.in  mentic.kdevelop  mentic.kdevelop.pcs  mentic.kdevses
mentic/src/: Makefile.am  mentic.cpp  mentic_main_widget.cpp  mentic_main_widget.h  mentic_options_dialog.cpp  mentic_options_dialog.h  mentic_settings_container.cpp  mentic_settings_container.h
